# ai-agents-swarm

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Makefile  diesel.toml
backend/configs/: dev.toml
backend/core/src/: lib.rs
backend/hr_agent/: Cargo.toml
backend/journalist_agent/: Cargo.toml
backend/lawyer_agent/: Cargo.toml
backend/manager_agent/: Cargo.toml
backend/migrations/2025-03-04-212032_create_users_table/: up.sql
backend/salesman_agent/: Cargo.toml
backend/secrets/: postgres-connection-string
backend/src/: main.rs  prelude.rs  tables.rs
backend/src/api/: mod.rs
backend/src/api/handlers/: mod.rs  probe.rs
backend/src/api/routers/: probe.rs
backend/src/app/: mod.rs
backend/src/domain/: mod.rs
backend/src/domain/user/: mod.rs  model.rs  repository.rs
backend/src/infra/: config.rs  dependencies.rs  mod.rs  schema.rs  web.rs
backend/src/infra/postgres/: connection.rs  migrations.rs  mod.rs
backend/src/utils/: prelude.rs
backend/swe_agent/: Cargo.toml
backend/teach_lead_agent/: Cargo.toml
