[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = "1.43.0"
chrono = "0.4.40"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono", "r2d2", "serde_json"] }
thiserror = "2.0.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"