[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono", "r2d2", "serde_json"] }
diesel_migrations = "2.2.0"
thiserror = "2.0.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
clap = { version = "4.5.31", features = ["derive"] }
toml = "0.8.20"
tracing-subscriber = "0.3.19"